upstream skourismanolis fix for "Fix active tab stripe overlap with bottom border. Whenever a tab is active, the stripe gradient overlaps with the bottom border. Adding a z-index to the stripe fixes that."

--- a/synthwave87.css
+++ b/synthwave87.css
@@ -1,4 +1,3 @@
-
 .mtk3 {
   color: #f92aad;
   text-shadow: 0 0 2px #100c0f, 0 0 5px #dc078e33, 0 0 10px #fff3;
@@ -77,6 +76,7 @@
   height: 0px;
   transition: opacity 1s;
   opacity: 0;
+  z-index: 6;
 }
 
 /* Active sidebar item */
